# database_dsl_complexity

./: .gitmodules  README.md  all_metrics.csv  all_metrics_correlation.csv  plotmetrics.py
DotNETEntity/: .gitignore  CaseConverter.cs  DataLoader.cs  DatabaseDemo.csproj  Dictionary.cs  Metrics.cs  Model.cs  Program.cs  Queries.cs  TestCase.cs  metrics.csv
ExampleData/: README.md  gensessions.py  histogram.csv  metrics.csv  metrics_correlation.csv  mkdb.py  pickled_bookings.pkl  pickled_real_estates.pkl  pickled_users.pkl  query_results_before_migration.json  test_cases_before_migration.py
ExampleData/complexity_metrics/: .gitignore  Cargo.toml  sede.py  sede_stackoverflow_favorites.csv  weighting.py
ExampleData/complexity_metrics/sede_html_snapshots/: sede_example_query.html  sede_main_page.html
ExampleData/complexity_metrics/sede_html_snapshots/sede_example_query_files/: anchor.html  api.js  bframe.html  master.css  query  query.css
ExampleData/complexity_metrics/sede_html_snapshots/sede_example_query_files/anchor_data/: kESuPLVwfid4lCW82ocCO3QXyipR-hqTP-bwdoIO6lY.js
ExampleData/complexity_metrics/sede_html_snapshots/sede_main_page_files/: master
ExampleData/complexity_metrics/src/: dialect.rs  error.rs  histogram.rs  main.rs  metrics.rs  recursive.rs  visitor.rs
ExampleData/complexity_metrics/src/metrics/: halstead.rs  node_count.rs  token.rs  weighted_node_count.rs
HaskellEsqueleto/: .gitignore  ChangeLog.md  HaskellEsqueleto.cabal  README.md  package.yaml  stack.yaml
PythonMongoDB/: .gitignore  data_loader.py  main.py  metrics.csv  metrics.py  (+3 more)
(+29 files in other folders)
